--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
+  "engines": {
+    "node": "4.5.0"
+  },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
